<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="check_status">Check the status</string>

    <string name="select_file">Please select the file to download </string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_text_button">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_button_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_button_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="file_name_text">File name:</string>
    <string name="status_text">Status:</string>

    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="ok">OK</string>
</resources>
